# elder_and_dog

./: .gitignore  =1.11  AGENTS.md  CLAUDE.md  Goal.md  QUICKSTART_GPU.md  QUICKSTART_NAVIGATION.md  SLAM_實現現況報告.md  TEST.sh  claude_plan.md  conformance_check_plan.md  frames_2025-11-21_21.09.29.gv  frames_2025-11-21_22.01.58.gv  start_go2_simple.sh
.claude/: settings.local.json
docs/: CHANGELOG.md  README.md  coordinate_transformation.md  dependency_management.md  environment_setup_ubuntu.md  gemini_vlm_development.md  integration_plan.md  isaac_sim_integration.md  package_structure.md  quickstart_w6_w9.md  remote_gpu_setup.md  search_fsm_design.md  testing_and_verification.md  testing_plan.md  webrtc_troubleshooting.md
docs/00-overview/: Goal.md  QUICKSTART_GPU.md  QUICKSTART_NAVIGATION.md  README_SIMPLE.md  claude_plan.md  conformance_check_plan.md
docs/01-guides/: WEEK1_QUICKSTART.md  environment_setup_ubuntu.md  mac_utm_vm_setup.md  phase1_quick_check.md  quickstart_w6_w9.md  remote_gpu_setup.md  simulator_setup_checklist.md  webrtc_troubleshooting.md
docs/02-design/: coco_vlm_development.md  coordinate_transformation.md  gemini_vlm_backup.md  (+4 more)
scripts/: nav2_goal_autotest.py
src/: requirements-lock.txt
src/search_logic/: IMPROVEMENTS.md  README.md  package.xml  setup.cfg  setup.py
src/search_logic/config/: patrol_params.yaml
src/search_logic/launch/: patrol.launch.py
src/search_logic/resource/: search_logic
src/search_logic/search_logic/: __init__.py  nav2_client.py  simple_patrol_node.py
src/search_logic/test/: test_import.py
(+19 files in other folders)
