<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>search_logic</name>
  <version>0.1.0</version>
  <description>簡單巡邏與導航測試套件（不依賴 VLM）</description>
  <maintainer email="your-email@example.com">FJU Go2 Team</maintainer>
  <license>MIT</license>

  <!-- 建置工具 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 執行時依賴 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>

  <!-- Launch 檔案依賴 -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- 測試依賴 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
